// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./docs/.vuepress/components/demo/select/basic.vue correctly 1`] = `
<section>
  <div tabindex="0" class="nova-select">
    <div class="nova-select-toggle"><span class="nova-select-arrow"></span>
      <!----> <span class="nova-select-text">
        shanghai
      </span>
      <!---->
    </div>
    <!---->
  </div>
  <div tabindex="-1" class="nova-select is-disabled">
    <div class="nova-select-toggle"><span class="nova-select-arrow"></span>
      <!----> <span class="nova-select-text">
        shanghai
      </span>
      <!---->
    </div>
    <!---->
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/select/multiple.vue correctly 1`] = `
<div tabindex="0" class="nova-select">
  <div class="nova-select-toggle"><span class="nova-select-arrow"></span>
    <!---->
    <!---->
    <div class="nova-select-labels"><span><span class="nova-select-label"><span>beijing</span> <span class="nova-select-label-delete"></span></span><span class="nova-select-label"><span>shanghai</span> <span class="nova-select-label-delete"></span></span></span></div>
  </div>
  <!---->
</div>
`;

exports[`renders ./docs/.vuepress/components/demo/select/opt-group.vue correctly 1`] = `
<div tabindex="0" class="nova-select">
  <div class="nova-select-toggle"><span class="nova-select-arrow"></span>
    <!----> <span class="nova-select-text">
        shanghai
      </span>
    <!---->
  </div>
  <!---->
</div>
`;
